--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,7 @@
         <a href="{{ url_for('login') }}">Login</a>
         {% else %}
         <a href="{{ url_for('logout') }}">Logout</a>
+        <a href="{{ url_for('dashboard') }}">Dashboard</a>
         {% endif %}
     </div>
     <hr>
