--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -3,7 +3,8 @@
 {% block content %}
     <div>
         {% for task in tasks %}
-        <a href="#">{{ task.title }}</a>
+        <a href="{{ url_for('task', id=task.id, title=task.title) }}">{{ task.title }}</a>
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Due Date: {{ task.due_date }}
         <form action="{{ url_for('delete', id=task.id, title=task.title) }}" method="post">
                 {{ form.hidden_tag() }}
                 {{ form.submit(value='Delete') }}
