--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -4,7 +4,9 @@
     <div>
         {% for task in tasks %}
         <a href="{{ url_for('task', id=task.id, title=task.title) }}">{{ task.title }}</a>
-        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Due Date: {{ task.due_date }} | Task Status: {{ task.progress }}
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Due Date: {{ task.due_date }} |
+        Task Status: {{ dict(select_form.status.choices).get(task.progress) }} |
+        Priority: {{ dict(select_form.priority.choices).get(task.priority) }}
         <form action="{{ url_for('delete', id=task.id, title=task.title) }}" method="post">
             {{ form.hidden_tag() }}
             {{ form.submit(value='Delete') }}
