--- a/app/templates/task.html
+++ b/app/templates/task.html
@@ -27,10 +27,17 @@
                             <div class="d-flex flex-column align-items-start">
                                 <label for="date">
                                     Due date
-                                    <i class="fa-solid fa-calendar-days mb-1" style="position: absolute; top: calc(72.5%); left: 12rem;"></i>
+                                    <i class="fa-solid fa-calendar-days mb-1" style="position: absolute; top: 255px; left: 12rem;"></i>
                                 </label>
-                                <input type="text" id="date" name="date" placeholder="Date" class="form-control" style="width: 200px; background-color: white;">
+                                <input type="text" id="date" name="date" placeholder="Date" class="form-control"
+                                       style="width: 200px; background-color: white;" value="{{ date }}">
                             </div>
+                            <div class="mt-3">{{ form.activity.label }}</div>
+                            {% for activity in activities %}
+                                {{ activity.activity }} <br>
+                            {% endfor %}
+                            <div class="mt-2">{{ form.activity(size=32, class="form-control") }}</div>
+                            <button type="submit" name="AddTask" value="AddTask" class="col-4 mt-2 form-control btn btn-light border border-dark">Add</button>
                         </div>
                         <div>{{ form.submit(class="form-control btn btn-dark") }}</div>
                     </div>
