--- a/app/templates/task.html
+++ b/app/templates/task.html
@@ -4,7 +4,7 @@
     <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form action="" method="POST">
+                <form action="{{ url_for('task', id=task.id, title=task.title) }}" method="POST">
                     {{ form.hidden_tag() }}
                     <div class="modal-header">
                         {{ form.title(size=32, style="font-size: 2.5rem", class="form-control border border-white") }}
@@ -34,7 +34,17 @@
                             </div>
                             <div class="mt-3">{{ form.activity.label }}</div>
                             {% for activity in activities %}
-                                {{ activity.activity }} <br>
+                                <div class="row">
+                                    <div class="col-1">{{ form.check_done }}</div>
+                                    <div class="col-9">{{ activity.activity }}</div>
+                                    <div class="col-2">
+                                        <button type="submit"
+                                            class="btn btn-white btn-sm p-0 px-1 py-0 mb-1"
+                                            form="remove-form-{{ activity.id }}">
+                                        X
+                                    </button>
+                                    </div>
+                                </div>
                             {% endfor %}
                             <div class="mt-2">{{ form.activity(size=32, class="form-control") }}</div>
                             <button type="submit" name="AddTask" value="AddTask" class="col-4 mt-2 form-control btn btn-light border border-dark">Add</button>
@@ -42,6 +52,13 @@
                         <div>{{ form.submit(class="form-control btn btn-dark") }}</div>
                     </div>
                 </form>
+                {% for activity in activities %}
+                <form id="remove-form-{{ activity.id }}"
+                      action="{{ url_for('remove_activity', task_id=task.id, task_title=task.title, id=activity.id, activity=activity.activity) }}"
+                      method="POST" style="display: none;">
+                    {{ form.hidden_tag() }}
+                </form>
+            {% endfor %}
             </div>
         </div>
     </div>
