--- a/app/templates/task.html
+++ b/app/templates/task.html
@@ -35,7 +35,7 @@
                             <div class="mt-3">{{ form.activity.label }}</div>
                             {% for activity in activities %}
                                 <div class="row">
-                                    <div class="col-1">{{ form.check_done }}</div>
+                                    <div class="col-1"><input type="checkbox" name="status_{{ activity.id }}" {% if activity.done %}checked{% endif %}></div>
                                     <div class="col-9">{{ activity.activity }}</div>
                                     <div class="col-2">
                                         <button type="submit"
