--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,24 +7,38 @@
     {% for error in form.password.errors %}
         <div class="alert alert-info" role="alert">{{ error }}</div>
     {% endfor %}
-
-    <div class="d-flex vh-100 align-items-center justify-content-center">
-        <div class="text-center">
-            <img src="{{ url_for('static', filename='calendar-check-fill.svg') }}"
-                 width="72" height="72" class="mb-4">
-            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-            <form class="form-signin" action="" method="post" novalidate>
-                {{ form.hidden_tag() }}
-                <div class="flex-container">
-                    {{ form.username(size=32, class="form-control", placeholder="Username") }}
+    <div class="container">
+        <div class="d-flex align-items-center justify-content-center card bg-light"
+             style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); padding: 100px;">
+            <article class="card-body mx-auto">
+                <div class="text-center">
+                    <img src="{{ url_for('static', filename='calendar-check-fill.svg') }}"
+                         width="72" height="72" class="mb-4">
+                    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+                    <form class="form-signin" action="" method="POST" novalidate>
+                        {{ form.hidden_tag() }}
+                        <div class="flex-container input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fa fa-user"></i>
+                                </span>
+                            </div>
+                            {{ form.username(size=32, class="form-control", placeholder="Username") }}
+                        </div>
+                        <div class="flex-container mt-3 input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fa fa-lock"></i>
+                                </span>
+                            </div>
+                            {{ form.password(size=32, class="form-control", placeholder="Password") }}
+                        </div>
+                        <div>{{ form.remember_me(class="mt-4") }} {{ form.remember_me.label }}</div>
+                        <div>{{ form.submit(class="btn btn-lg btn-dark btn-block mt-3") }}</div>
+                        <div class="mt-3">New User? <a href="{{ url_for('register') }}">Click to Register!</a></div>
+                    </form>
                 </div>
-                <div class="flex-container">
-                    {{ form.password(size=32, class="form-control", placeholder="Password") }}
-                </div>
-                <p>{{ form.remember_me(class="mt-2") }} {{ form.remember_me.label }}</p>
-                <p>{{ form.submit(class="btn btn-lg btn-dark btn-block") }}</p>
-                <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
-            </form>
+            </article>
         </div>
     </div>
 {% endblock %}
