update dashboard template, add an horizontal rule to separate the tasks from the headers

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -2,13 +2,13 @@
 
 {% block content %}
     <div class="container-fluid">
-        <div class="row text-center mt-2">
+        <div class="row text-center mt-3">
             <div class="col">Task</div>
             <div class="col">Status</div>
             <div class="col">Priority</div>
             <div class="col">Due date</div>
             <div class="col">Remove task</div>
-        </div>
+        </div><hr>
         {% for task in tasks %}
             <div class="row mt-2">
                 <div class="col">
