--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,6 +33,23 @@
             font-size: 12px;
             padding: 4px 8px;
         }
+
+        html, body {
+          height: 100%;
+          margin: 0;
+        }
+
+        body {
+          display: flex;
+          flex-direction: column;
+        }
+
+        main.content-wrapper {
+          flex: 1;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
     </style>
 </head>
 <body>
